<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_UserManagment" Id="{cd6a86f3-3b0d-4eb8-9588-d25443aab3ee}">
    <Declaration><![CDATA[TYPE ST_UserManagment :
STRUCT
	userID 				:	INT;			//numer porządkowy użytkownika
	domain				:	STRING(80);
	enabled				:	BOOL;
	userLogin			:	STRING(80);		//login do zalogowania
	userNameSurname 	:	WSTRING(255);	//imię i nazwisko
	userNameSurnameNumber	:UINT;
	password			:	STRING(255);	//hasło kalwiaturowe
	passwordRFID		:	STRING(255);	//hasło rfid
	passwordQR			:	STRING(255);	//hasło qr
	userGroup			:	STRING(80);		//grupa użytkowników
	userGropuNumber		:	UINT;			//numer grupy
	autoLogOff			:	STRING(80);		//czas do wylogowania
	locale				:	STRING(80);		//gdzie zapisujemy
	timeFormatlocale	:	STRING(80);		//format godziny
	timeZone			:	STRING(80);		//strefa czasowa
	signedPassword		:	STRING(80);		//hasło przekazywane do HMI
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>